recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:11: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
    return tree(steps-1,length*shrink,shrink);
               ^Tree:11: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
    return tree(steps-1,length*shrink,shrink);
               ^Tree:11: warning: enclosing method tree has result type Unit: return value discarded
    return tree(steps-1,length*shrink,shrink);
    ^